Enhance menu with ingredient descriptions

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ body, html { margin:0; padding:0; height:100%; font-family: Arial, sans-serif; }
 .swiper-slide { padding:20px; overflow-y:auto; box-sizing:border-box; }
 .menu-section { margin-bottom:40px; }
 .menu-section h2 { font-size:1.4em; margin-top:0; }
-.menu-item { margin-bottom:10px; }
+.menu-item { margin-bottom:12px; }
+.menu-item .ingredients { opacity:0.6; font-size:0.9em; display:block; }
 </style>
 </head>
 <body>
@@ -20,107 +21,109 @@ body, html { margin:0; padding:0; height:100%; font-family: Arial, sans-serif; }
     <div class="swiper-slide">
       <div class="menu-section">
         <h2>🥗 САЛАТ</h2>
-        <p class="menu-item">ЦЕЗАРЬ С КУРИЦЕЙ — 250 гр. — 370 руб.</p>
-        <p class="menu-item">ЦЕЗАРЬ С КРЕВЕТКАМИ — 250 гр. — 470 руб.</p>
-        <p class="menu-item">ХРУСТЯЩИЙ БАКЛАЖАН — 250 гр. — 400 руб.</p>
+        <p class="menu-item"><strong>ЦЕЗАРЬ С КУРИЦЕЙ — 250 гр. — 370 руб.</strong><br><span class="ingredients">салат Айсберг, сыр Пармезан, томат, гренки, фирменная заправка.</span></p>
+        <p class="menu-item"><strong>ЦЕЗАРЬ С КРЕВЕТКАМИ — 250 гр. — 470 руб.</strong></p>
+        <p class="menu-item"><strong>ХРУСТЯЩИЙ БАКЛАЖАН — 250 гр. — 400 руб.</strong><br><span class="ingredients">обжаренный баклажан в японском кляре, томат, кинза, сливочный сыр, кунжут, соус кисло-сладкий</span></p>
       </div>
       <div class="menu-section">
         <h2>🍲 СУП</h2>
-        <p class="menu-item">ТОМ ЯМ — 400 мл — 550 руб.</p>
-        <p class="menu-item">ГРИБНОЙ КРЕМ С ТРЮФЕЛЕМ — 400 мл — 420 руб.</p>
-        <p class="menu-item">БОРЩ от шефа — 350 мл — 460 руб.</p>
-        <p class="menu-item">ПЕЛЬМЕНИ домашние — 200 гр. — 350 руб.</p>
+        <p class="menu-item"><strong>ТОМ ЯМ — 400 мл — 550 руб.</strong><br><span class="ingredients">мидии, креветки, кальмар, паста том ям, корень галангала, лист лайма, лемонграсс, кокосовое молоко, лайм, кинза</span></p>
+        <p class="menu-item"><strong>ГРИБНОЙ КРЕМ С ТРЮФЕЛЕМ — 400 мл — 420 руб.</strong><br><span class="ingredients">крем-суп из шампиньонов с трюфелем, сливки, сухари</span></p>
+        <p class="menu-item"><strong>БОРЩ от шефа — 350 мл — 460 руб.</strong><br><span class="ingredients">сало, сметана, хлеб</span></p>
+        <p class="menu-item"><strong>ПЕЛЬМЕНИ домашние — 200 гр. — 350 руб.</strong><br><span class="ingredients">свинина, сметана, зелень</span></p>
       </div>
       <div class="menu-section">
         <h2>🍝 СПАГЕТТИ / ЛАПША / ВОК</h2>
-        <p class="menu-item">ВОК С РИСОМ И КУРИЦЕЙ — 300 гр. — 370 руб.</p>
-        <p class="menu-item">ВОК С РИСОМ И МОРЕПРОДУКТАМИ — 300 гр. — 580 руб.</p>
-        <p class="menu-item">ЛАПША С КУРИЦЕЙ в азиатском стиле — 300 гр. — 370 руб.</p>
-        <p class="menu-item">ЛАПША С МОРЕПРОДУКТАМИ в азиатском стиле — 300 гр. — 580 руб.</p>
-        <p class="menu-item">СПАГЕТТИ КАРБОНАРА — 270 гр. — 400 руб.</p>
-        <p class="menu-item">СПАГЕТТИ С МОРЕПРОДУКТАМИ — 270 гр. — 580 руб.</p>
+        <p class="menu-item"><strong>ВОК С РИСОМ И КУРИЦЕЙ — 300 гр. — 370 руб.</strong></p>
+        <p class="menu-item"><strong>ВОК С РИСОМ И МОРЕПРОДУКТАМИ — 300 гр. — 580 руб.</strong></p>
+        <p class="menu-item"><strong>ЛАПША С КУРИЦЕЙ в азиатском стиле — 300 гр. — 370 руб.</strong><br><span class="ingredients">пшеничная лапша удон, куриное филе, сладкий перец, лук, кунжут, соуса</span></p>
+        <p class="menu-item"><strong>ЛАПША С МОРЕПРОДУКТАМИ в азиатском стиле — 300 гр. — 580 руб.</strong><br><span class="ingredients">кальмар, креветки, мидии</span></p>
+        <p class="menu-item"><strong>СПАГЕТТИ КАРБОНАРА — 270 гр. — 400 руб.</strong><br><span class="ingredients">бекон, паста Барилла, желток, сыр Пармезан</span></p>
+        <p class="menu-item"><strong>СПАГЕТТИ С МОРЕПРОДУКТАМИ — 270 гр. — 580 руб.</strong><br><span class="ingredients">мидии, креветки, кальмар, паста Барилла, сыр Пармезан</span></p>
       </div>
     </div>
     <div class="swiper-slide">
       <div class="menu-section">
         <h2>🌮 МЕКСИКАНСКАЯ КУХНЯ</h2>
-        <p class="menu-item">БУРРИТО — 270 гр. — 410 руб.</p>
-        <p class="menu-item">ТАКОС — 250 гр. — 380 руб.</p>
-        <p class="menu-item">КЕСАДИЛЬЯ — 250 гр. — 390 руб.</p>
+        <p class="menu-item"><em>в кукурузной лепёшке тортилья</em></p>
+        <p class="menu-item"><strong>БУРРИТО — 270 гр. — 410 руб.</strong><br><span class="ingredients">говядина, сладкий и острый перец, фасоль, кукуруза, лук, соуса</span></p>
+        <p class="menu-item"><strong>ТАКОС — 250 гр. — 380 руб.</strong><br><span class="ingredients">куриное филе, фри, кукуруза, салат пекинский, томат, острый перец, соуса</span></p>
+        <p class="menu-item"><strong>КЕСАДИЛЬЯ — 250 гр. — 390 руб.</strong><br><span class="ingredients">куриное филе, сладкий и острый перец, лук, кукуруза, фасоль, соуса</span></p>
       </div>
       <div class="menu-section">
         <h2>🍔 БУРГЕР</h2>
-        <p class="menu-item">БУРГЕР говядина — 320 гр. — 490 руб.</p>
-        <p class="menu-item">БУРГЕР курица — 260 гр. — 350 руб.</p>
-        <p class="menu-item">БУРГЕР свинина — 320 гр. — 390 руб.</p>
+        <p class="menu-item"><strong>БУРГЕР говядина — 320 гр. — 490 руб.</strong><br><span class="ingredients">котлета из говядины, Чеддер, томат, огурец, салат, соус сырный, томатный</span></p>
+        <p class="menu-item"><strong>БУРГЕР курица — 260 гр. — 350 руб.</strong><br><span class="ingredients">куриное филе, сыр Чеддер, томат, салат, огурец, соус сырный, барбекю</span></p>
+        <p class="menu-item"><strong>БУРГЕР свинина — 320 гр. — 390 руб.</strong><br><span class="ingredients">котлета из свинины, Чеддер, огурец, салат, томат, соус сырный, томатный</span></p>
       </div>
       <div class="menu-section">
         <h2>🚶 СТРИТ ФУД</h2>
-        <p class="menu-item">СЫРНЫЕ ПАЛОЧКИ — 150 гр. — 400 руб.</p>
-        <p class="menu-item">СТРИПСЫ КУРИНЫЕ — 6 шт. — 300 руб. / 12 шт. — 550 руб.</p>
-        <p class="menu-item">ФРИ — 150 гр. — 190 руб.</p>
-        <p class="menu-item">ФРИ С ПАРМЕЗАНОМ — 150 гр. — 250 руб.</p>
-        <p class="menu-item">ШАУРЕМА С КУРИЦЕЙ — 350 гр. — 300 руб.</p>
-        <p class="menu-item">СЭНДВИЧ С КУРИЦЕЙ — 250 гр. — 290 руб.</p>
-        <p class="menu-item">ХОТ-ДОГ — 250 гр. — 290 руб.</p>
+        <p class="menu-item"><strong>СЫРНЫЕ ПАЛОЧКИ — 150 гр. — 400 руб.</strong><br><span class="ingredients">собственного производства из фермерского сыра Сулугуни, брусничный соус</span></p>
+        <p class="menu-item"><strong>СТРИПСЫ КУРИНЫЕ — 6 шт. — 300 руб. / 12 шт. — 550 руб.</strong><br><span class="ingredients">собственного производства с томатным соусом</span></p>
+        <p class="menu-item"><strong>ФРИ — 150 гр. — 190 руб.</strong></p>
+        <p class="menu-item"><strong>ФРИ С ПАРМЕЗАНОМ — 150 гр. — 250 руб.</strong></p>
+        <p class="menu-item"><strong>ШАУРЕМА С КУРИЦЕЙ — 350 гр. — 300 руб.</strong><br><span class="ingredients">куриное филе, томат, огурец, салат пекинский, фри, соуса</span></p>
+        <p class="menu-item"><strong>СЭНДВИЧ С КУРИЦЕЙ — 250 гр. — 290 руб.</strong><br><span class="ingredients">куриное филе, салат, томат, огурец, соус томатный, сырный</span></p>
+        <p class="menu-item"><strong>ХОТ-ДОГ — 250 гр. — 290 руб.</strong><br><span class="ingredients">сосиска гриль, соус томатный, сырный, горчичный, огурец, салат пекинский</span></p>
       </div>
     </div>
     <div class="swiper-slide">
       <div class="menu-section">
-        <h2>🥬 ВЕГАН</h2>
-        <p class="menu-item">ХРУСТЯЩИЙ БАКЛАЖАН салат — 250 гр. — 400 руб.</p>
-        <p class="menu-item">ВОК С РИСОМ И ОВОЩАМИ — 300 гр. — 350 руб.</p>
-        <p class="menu-item">ЛАПША С ОВОЩАМИ — 300 гр. — 350 руб.</p>
-        <p class="menu-item">КЕСАДИЛЬЯ — 250 гр. — 350 руб.</p>
-        <p class="menu-item">ШАУРЕМА — 300 гр. — 280 руб.</p>
-        <p class="menu-item">ФРИ — 150 гр. — 190 руб. / 30 мл — 50 руб.</p>
-        <p class="menu-item">СЫРНЫЕ ПАЛОЧКИ — 150 гр. — 400 руб.</p>
+        <h2>🌱 ВЕГАН</h2>
+        <p class="menu-item"><strong>ХРУСТЯЩИЙ БАКЛАЖАН салат — 250 гр. — 400 руб.</strong><br><span class="ingredients">обжаренный баклажан, томат, кинза, сливочный сыр, кунжут, соус кисло-сладкий</span></p>
+        <p class="menu-item"><strong>ВОК С РИСОМ И ОВОЩАМИ — 300 гр. — 350 руб.</strong><br><span class="ingredients">рис, сладкий перец, лук, баклажан, паназиатский соус, кунжут, кинза</span></p>
+        <p class="menu-item"><strong>ЛАПША С ОВОЩАМИ в азиатском стиле — 300 гр. — 350 руб.</strong><br><span class="ingredients">пшеничная лапша, сладкий перец, лук, баклажан, паназиатский соус, кунжут, кинза</span></p>
+        <p class="menu-item"><strong>КЕСАДИЛЬЯ в кукурузной лепёшке — 250 гр. — 350 руб.</strong><br><span class="ingredients">сладкий перец, лук, кукуруза, фасоль, острый перец, соус томатный</span></p>
+        <p class="menu-item"><strong>ШАУРЕМА — 300 гр. — 280 руб.</strong><br><span class="ingredients">салат пекинский, томат, огурец, картофель фри, соус ореховый и томатный, лаваш</span></p>
+        <p class="menu-item"><strong>ФРИ — 150 гр. — 190 руб. / 30 мл — 50 руб.</strong><br><span class="ingredients">соус томатный / барбекю</span></p>
+        <p class="menu-item"><strong>СыРНЫЕ ПАЛОЧКИ — 150 гр. — 400 руб.</strong><br><span class="ingredients">обжаренные сыр Сулугуни, соус брусника. Готовим сами.</span></p>
       </div>
     </div>
     <div class="swiper-slide">
       <div class="menu-section">
         <h2>☕️ КОФЕ</h2>
-        <p class="menu-item">КАПУЧИНО — 250 мл — 200 руб.</p>
-        <p class="menu-item">ЛАТТЕ — 350 мл — 250 руб.</p>
-        <p class="menu-item">ФЛЭТ УАЙТ — 350 мл — 230 руб.</p>
-        <p class="menu-item">АМЕРИКАНО — 250 мл — 220 руб. / 250 мл — 170 руб.</p>
-        <p class="menu-item">БАМБЛ НА ФРЕШЕ — 375 мл — 320 руб.</p>
-        <p class="menu-item">АЙС ЛАТТЕ — 500 мл — 300 руб.</p>
-        <p class="menu-item">ЭСПРЕССО-ТОНИК — 375 мл — 310 руб.</p>
+        <p class="menu-item"><strong>КАПУЧИНО — 250 мл — 200 руб.</strong></p>
+        <p class="menu-item"><strong>ЛАТТЕ — 350 мл — 250 руб.</strong></p>
+        <p class="menu-item"><strong>ФЛЭТ УАЙТ — 350 мл — 230 руб.</strong></p>
+        <p class="menu-item"><strong>АМЕРИКАНО — 250 мл — 220 руб.</strong></p>
+        <p class="menu-item"><strong>АМЕРИКАНО — 250 мл — 170 руб.</strong></p>
+        <p class="menu-item"><strong>БАМБЛ НА ФРЕШЕ — 375 мл — 320 руб.</strong><br><span class="ingredients">фреш апельсин, кофе, сироп на выбор</span></p>
+        <p class="menu-item"><strong>АЙС ЛАТТЕ — 500 мл — 300 руб.</strong><br><span class="ingredients">молоко, кофе, сироп на выбор</span></p>
+        <p class="menu-item"><strong>ЭСПРЕССО-ТОНИК — 375 мл — 310 руб.</strong><br><span class="ingredients">тоник, фреш лимон, кофе, сахарный сироп</span></p>
       </div>
       <div class="menu-section">
         <h2>🍷 ГЛИНТВЕЙН б/а</h2>
-        <p class="menu-item">350 мл — 300 руб.</p>
-        <p class="menu-item">КАКАО — 350 мл — 290 руб.</p>
-        <p class="menu-item">БАБЛ ТИ чайный или кофейный — 500 мл — 350 руб.</p>
+        <p class="menu-item"><strong>ГЛИНТВЕЙН — 350 мл — 300 руб.</strong><br><span class="ingredients">сок виноград, мёд, специи, цитрус, яблоко</span></p>
+        <p class="menu-item"><strong>КАКАО — 350 мл — 290 руб.</strong><br><span class="ingredients">какао Mehmet Efendi, молоко, сахар</span></p>
+        <p class="menu-item"><strong>БАБЛ ТИ чайный или кофейный — 500 мл — 350 руб.</strong><br><span class="ingredients">тапиока, молоко, чай, сироп и топинг на выбор, лёд</span></p>
       </div>
       <div class="menu-section">
         <h2>🍰 ДЕСЕРТ</h2>
-        <p class="menu-item">ЧИЗКЕЙК — 300 руб.</p>
-        <p class="menu-item">АЛЬТЕРНАТИВНОЕ МОЛОКО +60 руб.</p>
+        <p class="menu-item"><strong>ЧИЗКЕЙК — 300 руб.</strong></p>
+        <p class="menu-item"><strong>АЛЬТЕРНАТИВНОЕ МОЛОКО + 60 руб.</strong></p>
       </div>
       <div class="menu-section">
         <h2>🍵 ЧАЙ В СТАКАНЕ — 350 мл</h2>
-        <p class="menu-item">ОБЛЕПИХА-МАЛИНА — 280 руб.</p>
-        <p class="menu-item">ЧЁРНАЯ СМОРОДИНА — 280 руб.</p>
-        <p class="menu-item">ЯГОДНЫЙ или ОБЛЕПИХОВЫЙ — 280 руб.</p>
-        <p class="menu-item">РОМАШКА — 250 руб.</p>
-        <p class="menu-item">ТРАДИЦИОННЫЙ — 170 руб.</p>
+        <p class="menu-item"><strong>ОБЛЕПИХА-МАЛИНА — 280 руб.</strong><br><span class="ingredients">облепиха, малина, апельсин, мёд, Эрл-Грей</span></p>
+        <p class="menu-item"><strong>ЧЕРНАЯ СМОРОДИНА — 280 руб.</strong><br><span class="ingredients">сосновые почки, Ройбуш, мёд, смородина, корица</span></p>
+        <p class="menu-item"><strong>ЯГОДНЫЙ или ОБЛЕПИХОВЫЙ — 280 руб.</strong><br><span class="ingredients">ягоды, корень имбиря, мёд, Ассам</span></p>
+        <p class="menu-item"><strong>РОМАШКА — 250 руб.</strong><br><span class="ingredients">ромашка, Сенча, мёд</span></p>
+        <p class="menu-item"><strong>ТРАДИЦИОННЫЙ — 170 руб.</strong><br><span class="ingredients">Ассам / Эрл Грей / Молочный Улун / Манговый Улун / Ройбуш / Гречишный / Анчан / Сенча</span></p>
       </div>
       <div class="menu-section">
         <h2>🍋 ЛИМОНАДЫ — 500 мл</h2>
-        <p class="menu-item">МАНДАРИН-АПЕЛЬСИН — 280 руб.</p>
-        <p class="menu-item">МОХИТО — 280 руб.</p>
-        <p class="menu-item">ЯГОДНЫЙ — 280 руб.</p>
-        <p class="menu-item">ОБЛЕПИХОВЫЙ — 280 руб.</p>
-        <p class="menu-item">ФИАЛКА — 250 руб.</p>
+        <p class="menu-item"><strong>МАНДАРИН-АПЕЛЬСИН — 280 руб.</strong></p>
+        <p class="menu-item"><strong>МОХИТО — 280 руб.</strong><br><span class="ingredients">мята, лайм, содовая, сахарный сироп</span></p>
+        <p class="menu-item"><strong>ЯГОДНЫЙ — 280 руб.</strong><br><span class="ingredients">малина, смородина, содовая, сахарный сироп</span></p>
+        <p class="menu-item"><strong>ОБЛЕПИХОВЫЙ — 280 руб.</strong><br><span class="ingredients">фреш апельсин, облепиха, содовая, сахарный сироп</span></p>
+        <p class="menu-item"><strong>ФИАЛКА — 250 руб.</strong><br><span class="ingredients">чай Анчан, сироп маракуйя, лимон, содовая</span></p>
       </div>
       <div class="menu-section">
         <h2>💧 ВОДА / СОК</h2>
-        <p class="menu-item">ФРЕШ АПЕЛЬСИНОВЫЙ — 300 мл — 350 руб.</p>
-        <p class="menu-item">ВОДА — 500 мл — 100 руб.</p>
-        <p class="menu-item">КОЛА Rich — 330 мл — 120 руб.</p>
-        <p class="menu-item">СОК Rich — 250 мл — 140 руб.</p>
+        <p class="menu-item"><strong>ФРЕШ АПЕЛЬСИНОВЫЙ — 300 мл — 350 руб.</strong></p>
+        <p class="menu-item"><strong>ВОДА — 500 мл — 100 руб.</strong><br><span class="ingredients">б/г, газ.</span></p>
+        <p class="menu-item"><strong>КОЛА Rich — 330 мл — 120 руб.</strong></p>
+        <p class="menu-item"><strong>СОК Rich — 250 мл — 140 руб.</strong></p>
       </div>
     </div>
   </div>
@@ -129,7 +132,7 @@ body, html { margin:0; padding:0; height:100%; font-family: Arial, sans-serif; }
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 <script>
 const swiper = new Swiper('.swiper', {
-  pagination: { el: '.swiper-pagination', clickable: true },
+  pagination: { el: '.swiper-pagination', clickable: true }
 });
 </script>
 </body>
